--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,8 @@
 <div class="jumbotron">
-  <h1 class="display-4">Profil utilisateur de:</h1>
+  <h1 class="display-4">Profil utilisateur de :</h1>
   <h1 class="display-4"><%= @user.first_name%> <%= @user.last_name%></h1>
   <p class="lead"><%= @user.description%></p>
-  <p>Clique pour crééer un événement</p>
+  <p>Clique pour créer un événement</p>
   <%=link_to "Créer un événement", new_event_path, class: "btn btn-primary btn-lg" %>
   <%=link_to "Changer ton mot de passe", edit_user_registration_path, class: "btn btn-primary btn-lg" %>
 </div>
@@ -10,7 +10,7 @@
 <div class="container d-flex justify-content-center">
 	<div class="row">
 		<div class="col-sm-12 d-flex justify-content-center m-3">
-			<h2>Ce que je sais de <%=@user.first_name %> <%=@user.last_name %></h2>
+			<h2>Mon profil : <%=@user.first_name %> <%=@user.last_name %></h2>
 		</div>
 		<div class="col-sm-12 d-flex justify-content-center">
 			<table class="table table-bordered">
@@ -19,6 +19,7 @@
 			      <th scope="col">First name</th>
 			      <th scope="col">Last name</th>
 			      <th scope="col">Email address</th>
+						<th scope="col">Avatar</th>
 			    </tr>
 			  </thead>
 			  <tbody>
@@ -26,6 +27,11 @@
 			      <td><%=@user.first_name %></td>
 			      <td><%=@user.last_name %></td>
 			      <td><%=@user.email %></td>
+						<td><%if @user.avatar.attached?%>
+  								<%= image_tag @user.avatar, alt: 'avatar' %>
+								<%else%>
+  								<p>=== Il n'y a pas encore d'avatar lié à cet utilisateur ===</p>
+								<%end%></td>
 			    </tr>
 			    <tr>
 			  </tbody>
@@ -33,9 +39,14 @@
 		</div>
 		<div class="col-sm-12 d-flex justify-content-center">
 			<%#= link_to edit_user_path(@user.id) do %>
-			<button class="btn btn-icon btn-3 btn-primary" type="button">
+			<button class="btn btn-icon btn-3 btn-info" type="button">
 				<span class="btn-inner--icon"><i class="ni ni-bag-17"></i></span>
 			   <span class="btn-inner--text">Editer mes informations</span>
+				 <h5>Changer d'avatar ?</h5>
+<%= form_tag user_avatars_path(@user), multipart: true do %>
+  <%= file_field_tag :avatar %>
+  <%= submit_tag "mettre à jour" %>
+<% end %>
 			</button>
 			<%#end%>
 		</div>
@@ -52,7 +63,7 @@
 			  <thead>
 			    <tr>
 			      <th scope="col">Evénement</th>
-			      <th scope="col">Page de l'événément</th>
+			      <th scope="col">Page de l'événement</th>
 			    </tr>
 			  </thead>
 			  <tbody>
@@ -79,7 +90,7 @@
 			  <thead>
 			    <tr>
 			      <th scope="col">Evénement</th>
-			      <th scope="col">Page de l'événément</th>
+			      <th scope="col">Page de l'événement</th>
 			    </tr>
 			  </thead>
 			  <tbody>
@@ -95,5 +106,3 @@
 		</div>
 	</div>
 </div>
-
-
